--- a/demo_topics/topic_modeler.ipynb
+++ b/demo_topics/topic_modeler.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "id": "a6d487d7-f64a-41f2-887b-9b9cbde3cdee",
    "metadata": {},
    "outputs": [],
@@ -41,11 +41,11 @@
     "    return distance.cosine(v1, v2)\n",
     "\n",
     "class VectorDatabase:\n",
-    "    def __init__(self,nlp,model, sentiment_pipe):\n",
+    "    def __init__(self,nlp,model):\n",
     "        self.vectors = {}\n",
     "        self.nlp = nlp\n",
     "        self.model = model\n",
-    "        self.sentiment_pipe = sentiment_pipe\n",
+    "        \n",
     "\n",
     "    def split_sentences(self, text):\n",
     "        doc = self.nlp(text, disable=[\"ner\"])\n",
@@ -81,7 +81,7 @@
     "        aux = pd.DataFrame(similarities)\n",
     "        aux.columns = ['index_db','text','similarity','polarity','topic']\n",
     "\n",
-    "        aux = aux.reset_index().query('index<10 or similarity<0.5').query('similarity<0.6')[['index','topic']].groupby(['topic']).count()\n",
+    "        aux = aux.reset_index().query('index<10 or similarity<0.6').query('similarity<0.7')[['index','topic']].groupby(['topic']).count()\n",
     "        \n",
     "        aux['index2'] = aux['index']/aux['index'].sum()\n",
     "        \n",
@@ -120,28 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "id": "8d7ffcbc-d8b5-4a20-bb37-881ac7f68202",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.11 s, sys: 486 ms, total: 4.6 s\n",
+      "Wall time: 4.68 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "import numpy as np\n",
     "from scipy.spatial import distance\n",
     "from collections import defaultdict\n",
     "from typing import List, Tuple\n",
     "import spacy\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "model = SentenceTransformer('multi-qa-mpnet-base-dot-v1')\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
     "\n",
-    "\n",
-    "# Use a pipeline as a high-level helper\n",
-    "from transformers import pipeline\n",
-    "\n",
-    "pipe = pipeline(\"text-classification\", model=\"LiYuan/amazon-review-sentiment-analysis\")\n",
     "\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_lg\")\n",
-    "vector_db = VectorDatabase(nlp, model,pipe)\n",
+    "vector_db = VectorDatabase(nlp, model)\n",
     "\n",
     "for index, row in reviews.iterrows():\n",
     "    vector_db.insert(row['Review'],row['Polarity'],row['Topic'])\n",
@@ -158,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "id": "f8c186fe-f4ef-4223-85ae-1f6af1f1b120",
    "metadata": {},
    "outputs": [
@@ -191,39 +196,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Material and Quality</td>\n",
-       "      <td>\\nThese shorts are very flattering and perfect...</td>\n",
-       "      <td>i really loved them , until i put them through...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
        "      <td>longevity</td>\n",
        "      <td>\\nThese shorts are very flattering and perfect...</td>\n",
        "      <td>i hung dry them , but the edges have already s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>longevity</td>\n",
-       "      <td>\\nThese shorts are very flattering and perfect...</td>\n",
-       "      <td>i can tell these shorts will have a short life...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  topic                                             review  \\\n",
-       "0  Material and Quality  \\nThese shorts are very flattering and perfect...   \n",
-       "0             longevity  \\nThese shorts are very flattering and perfect...   \n",
-       "0             longevity  \\nThese shorts are very flattering and perfect...   \n",
+       "       topic                                             review  \\\n",
+       "0  longevity  \\nThese shorts are very flattering and perfect...   \n",
        "\n",
        "                                          sub_review  \n",
-       "0  i really loved them , until i put them through...  \n",
-       "0  i hung dry them , but the edges have already s...  \n",
-       "0  i can tell these shorts will have a short life...  "
+       "0  i hung dry them , but the edges have already s...  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "id": "50ffcb27-5bda-4c07-b04d-445fb2dec275",
    "metadata": {},
    "outputs": [],
@@ -279,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "id": "d314b67a-d011-49c7-8c3e-d6bf2c4e48ea",
    "metadata": {
     "scrolled": true
@@ -530,8 +519,8 @@
       "238\n",
       "239\n",
       "240\n",
-      "CPU times: user 1min 45s, sys: 2.77 s, total: 1min 48s\n",
-      "Wall time: 1min 48s\n"
+      "CPU times: user 20.7 s, sys: 302 ms, total: 21 s\n",
+      "Wall time: 20.8 s\n"
      ]
     },
     {
@@ -569,19 +558,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fit and Comfort</th>\n",
-       "      <td>3.930769</td>\n",
+       "      <td>3.838384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Material and Quality</th>\n",
-       "      <td>3.808219</td>\n",
+       "      <td>3.409091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Versatility</th>\n",
-       "      <td>4.571429</td>\n",
+       "      <td>4.076923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>longevity</th>\n",
-       "      <td>3.000000</td>\n",
+       "      <td>2.777778</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -591,13 +580,13 @@
        "                         stars\n",
        "topic                         \n",
        "overall               3.809129\n",
-       "Fit and Comfort       3.930769\n",
-       "Material and Quality  3.808219\n",
-       "Versatility           4.571429\n",
-       "longevity             3.000000"
+       "Fit and Comfort       3.838384\n",
+       "Material and Quality  3.409091\n",
+       "Versatility           4.076923\n",
+       "longevity             2.777778"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,6 +618,12 @@
     "\n",
     "pd.concat([overall,topics])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "325eca7f-6b8d-4573-abaf-2c1afff0e8dc",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
