streaming and new schema for review by topics

--- a/demo_topics/topic_modeler-fast-encoder.ipynb
+++ b/demo_topics/topic_modeler-fast-encoder.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "53c5423e-f16d-439c-8896-0a4fd50a4309",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "reviews = pd.read_csv('../Syntetic_reviews/sample_reviews_fashion.csv')"
+    "reviews = pd.read_csv('../Syntetic_reviews/reviews_all.csv')"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "a6d487d7-f64a-41f2-887b-9b9cbde3cdee",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "8d7ffcbc-d8b5-4a20-bb37-881ac7f68202",
    "metadata": {},
    "outputs": [
@@ -129,8 +129,8 @@
      "output_type": "stream",
      "text": [
       "Model found at: /Users/mateograciano/.cache/torch/sentence_transformers/sentence-transformers_all-MiniLM-L6-v2/quantized_true.onnx\n",
-      "CPU times: user 11.1 s, sys: 443 ms, total: 11.5 s\n",
-      "Wall time: 2.93 s\n"
+      "CPU times: user 36.1 s, sys: 499 ms, total: 36.6 s\n",
+      "Wall time: 6.29 s\n"
      ]
     }
    ],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "f8c186fe-f4ef-4223-85ae-1f6af1f1b120",
    "metadata": {},
    "outputs": [
@@ -199,33 +199,60 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>longevity</td>\n",
-       "      <td>\\nThese shorts are very flattering and perfect...</td>\n",
+       "      <td>Longevity</td>\n",
+       "      <td>\\n\\nI hung dry them, but the edges have alread...</td>\n",
        "      <td>i hung dry them , but the edges have already s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Design</td>\n",
+       "      <td>\\n\\nI hung dry them, but the edges have alread...</td>\n",
+       "      <td>amazing design .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fit and Comfort</td>\n",
+       "      <td>\\n\\nI hung dry them, but the edges have alread...</td>\n",
+       "      <td>the fit is perfect .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Customer Support</td>\n",
+       "      <td>\\n\\nI hung dry them, but the edges have alread...</td>\n",
+       "      <td>awful customer service</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       topic                                             review  \\\n",
-       "0  longevity  \\nThese shorts are very flattering and perfect...   \n",
+       "              topic                                             review  \\\n",
+       "0         Longevity  \\n\\nI hung dry them, but the edges have alread...   \n",
+       "0            Design  \\n\\nI hung dry them, but the edges have alread...   \n",
+       "0   Fit and Comfort  \\n\\nI hung dry them, but the edges have alread...   \n",
+       "0  Customer Support  \\n\\nI hung dry them, but the edges have alread...   \n",
        "\n",
        "                                          sub_review  \n",
-       "0  i hung dry them , but the edges have already s...  "
+       "0  i hung dry them , but the edges have already s...  \n",
+       "0                                   amazing design .  \n",
+       "0                               the fit is perfect .  \n",
+       "0                             awful customer service  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "str = '''\n",
-    "These shorts are very flattering and perfect for running in. \n",
-    "I really loved them, until I put them through the wash once. \n",
+    "\n",
     "I hung dry them, but the edges have already started deteriorating. \n",
-    "I can tell these shorts will have a short lifespan, and I've never had this type of issue with any other shorts I bought.\n",
+    "Amazing Design.\n",
+    "The fit is perfect.\n",
+    "Awful Customer Service\n",
+    "\n",
+    "\n",
     "'''\n",
     "\n",
     "aux = vector_db.long_search(str)\n",
