error no text in message

--- a/demo_topics/topic_modeler.ipynb
+++ b/demo_topics/topic_modeler.ipynb
@@ -268,6 +268,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "0308d717-c2ac-4b6e-947c-06c83711fa10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'a':1,'b':2}\n",
+    "'a' in d.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "d314b67a-d011-49c7-8c3e-d6bf2c4e48ea",
    "metadata": {
