--- a/demo_topics/topic_modeler-fast-encoder-Evaluation.ipynb
+++ b/demo_topics/topic_modeler-fast-encoder-Evaluation.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 280,
    "id": "8d7ffcbc-d8b5-4a20-bb37-881ac7f68202",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
      "output_type": "stream",
      "text": [
       "Making Classifications\n",
-      "recall: 0.8859649122807017 precision: 0.8859649122807017\n",
+      "recall: 0.9122807017543859 precision: 0.9122807017543859\n",
       "Cross validation #2 of 5\n",
       "uploading vectors to DB\n",
       "setting thresholds\n"
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "Making Classifications\n",
-      "recall: 0.9122807017543859 precision: 0.9122807017543859\n",
+      "recall: 0.9122807017543859 precision: 0.9203539823008849\n",
       "Cross validation #3 of 5\n",
       "uploading vectors to DB\n",
       "setting thresholds\n"
@@ -104,7 +104,7 @@
      "output_type": "stream",
      "text": [
       "Making Classifications\n",
-      "recall: 0.8771929824561403 precision: 0.8849557522123894\n",
+      "recall: 0.9649122807017544 precision: 0.9649122807017544\n",
       "Cross validation #4 of 5\n",
       "uploading vectors to DB\n",
       "setting thresholds\n"
@@ -131,9 +131,9 @@
       "uploading vectors to DB\n",
       "setting thresholds\n",
       "Making Classifications\n",
-      "recall: 0.9122807017543859 precision: 0.9122807017543859\n",
-      "CPU times: user 10min 31s, sys: 3.68 s, total: 10min 34s\n",
-      "Wall time: 3min 39s\n"
+      "recall: 0.9298245614035088 precision: 0.9380530973451328\n",
+      "CPU times: user 11min 5s, sys: 4.58 s, total: 11min 9s\n",
+      "Wall time: 4min\n"
      ]
     },
     {
