Data is validated on our model, as well as new synthetic reviews were created. Normalizing encondings such that the distance become Pearson correlation seemed to improve out model; at least it seemed to made it competitive against the zero-shot learning one from Meta (ours is faster

--- a/demo_topics/topic_modeler-fast-encoder-validation.ipynb
+++ b/demo_topics/topic_modeler-fast-encoder-validation.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "19029324",
+   "execution_count": 28,
+   "id": "fbea87b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
+    "import json\n",
     "from typing import List, Tuple\n",
     "from collections import defaultdict\n",
     "\n",
@@ -24,6 +25,7 @@
     "import pandas as pd\n",
     "from scipy.spatial import distance\n",
     "from fast_sentence_transformers import FastSentenceTransformer as SentenceTransformer\n",
+    "from transformers import pipeline\n",
     "\n",
     "sys.path.insert(0, '../')\n",
     "from upload_data.utils import execute_query\n",
@@ -35,7 +37,7 @@
     "        self.nlp = nlp\n",
     "        self.model = model\n",
     "        self.very_similar = 0.5\n",
-    "        self.similar = 0.5\n",
+    "        self.similar = 0.8\n",
     "        \n",
     "\n",
     "    def split_sentences(self, text):\n",
@@ -53,12 +55,11 @@
     "        return texts\n",
     "\n",
     "\n",
-    "    def insert(self, sentence: str, polarity: int, type: str) -> None:\n",
+    "    def insert(self, sentence: str, type: str) -> None:\n",
     "        model = self.model\n",
-    "        embeddings = model.encode(sentence)\n",
+    "        embeddings = model.encode(sentence, normalize_embeddings = True)\n",
     "        key = len(self.vectors) + 1\n",
     "        self.vectors[key] = {'text': sentence,\n",
-    "                             'polarity': polarity,\n",
     "                             'type': type,\n",
     "                             'vector': embeddings}\n",
     "\n",
@@ -66,50 +67,45 @@
     "        model = self.model\n",
     "        query_vector = model.encode(query)\n",
     "        \n",
-    "        similarities = [(key, value['text'],distance.cosine(query_vector, value['vector']),value['polarity'],value['type']) for key, value in self.vectors.items()]\n",
+    "        similarities = [(key, value['text'],distance.cosine(query_vector, value['vector']), value['type']) for key, value in self.vectors.items()]\n",
     "        \n",
-    "\n",
     "        aux = pd.DataFrame(similarities)\n",
-    "        aux.columns = ['index_db','text','similarity','polarity','topic']\n",
+    "        aux.columns = ['index_db','text','similarity','topic']\n",
     "        aux = aux.sort_values(by=['similarity']).reset_index(drop=True).reset_index()\n",
-    "\n",
-    "        #aux = aux.reset_index().query('index<20 or similarity<0.7').query('similarity<1')[['index','topic']].groupby(['topic']).count()\n",
+    "        \n",
+    "        sims = 1/(1+aux['similarity'].values)\n",
+    "        norm_sim = sims/np.sum(sims)\n",
+    "        information = -np.log2(norm_sim)\n",
+    "        entropy = np.sum(norm_sim*information)\n",
     "        \n",
     "        aux = aux.query('index<=10')\n",
-    "        #aux = aux.query('similarity <={}'.format(self.very_similar))\n",
-    "\n",
     "        aux = aux.query('similarity <={}'.format(self.similar))\n",
-    "        \n",
     "        aux = aux[['index','topic']].groupby(['topic']).count()\n",
-    "        \n",
-    "        \n",
-    "        #aux['index2'] = aux['index']/aux['index'].sum()\n",
-    "\n",
-    "        \n",
-    "        \n",
     "\n",
     "        aux = aux.sort_values(by='index', ascending=False).head(1)\n",
     "                \n",
-    "        return  list(aux.index.values)\n",
+    "        return  list(aux.index.values), entropy\n",
     "\n",
     "    def long_search(self, query: str):\n",
     "        topics = []\n",
+    "        avg_entropy = []\n",
     "        for str in self.split_sentences(query):\n",
-    "            topics_this = self.search(str)\n",
+    "            topics_this, entropy = self.search(str)\n",
     "            if len(topics_this)>0:\n",
     "                mini_df = pd.DataFrame(topics_this)\n",
     "                mini_df.columns = ['topic']\n",
     "                mini_df['review'] = query\n",
     "                mini_df['sub_review'] = str\n",
     "                topics.append(mini_df)\n",
+    "                avg_entropy.append(entropy)\n",
     "        if len(topics)>0:\n",
     "            \n",
     "            aux = pd.concat(topics)\n",
-    "            #aux ['stars'] = [int(self.sentiment_pipe(str)[0]['label'][0]) for str in aux.sub_review]\n",
     "        else:\n",
     "            aux = None\n",
-    "            \n",
-    "        return  aux\n",
+    "        \n",
+    "        avg_entropy = np.mean(avg_entropy)\n",
+    "        return  aux, avg_entropy\n",
     "\n",
     "    def set_th(self):\n",
     "        data = pd.DataFrame(self.vectors).transpose()\n",
@@ -142,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f39370f",
+   "id": "7338f64f",
    "metadata": {},
    "source": [
     "#### Load models: \n",
@@ -152,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "c2c1c26f",
    "metadata": {},
    "outputs": [
@@ -165,7 +161,10 @@
     }
    ],
    "source": [
-    "reviews = pd.read_csv('../Syntetic_reviews/reviews_all.csv')\n",
+    "with open('syn_reviews.json', 'r') as file:\n",
+    "    syn_reviews = json.load(file)\n",
+    "    file.close()\n",
+    "    \n",
     "model = SentenceTransformer(\"all-MiniLM-L6-v2\", device=\"cpu\", quantize=True)\n",
     "nlp = spacy.load(\"en_core_web_lg\")"
    ]
@@ -180,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "bbbb8e3b",
+   "execution_count": 30,
+   "id": "3dfda520",
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +194,27 @@
    "source": [
     "vector_db = VectorDatabase(nlp, model)\n",
     "print('uploading vectors to DB')\n",
-    "for _, row in reviews.iterrows():\n",
-    "    vector_db.insert(row['Review'],row['Polarity'],row['Topic'])"
+    "for topic, reviews in syn_reviews.items():\n",
+    "    for review in reviews:\n",
+    "        vector_db.insert(review,topic)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "2d5e09a1",
+   "metadata": {},
+   "source": [
+    "vectors = {}\n",
+    "for index, topic in enumerate(syn_reviews.keys()):\n",
+    "    \n",
+    "    centroid = {'text': f'Centroid of {topic}',\n",
+    "                'type': topic,\n",
+    "                'vector': np.mean([element['vector'] \n",
+    "                                   for element in vector_db.vectors.values() \n",
+    "                                   if element['type'] == topic], axis = 0)}\n",
+    "    vectors[index + 1] = centroid\n",
+    "\n",
+    "vector_db.vectors = vectors"
    ]
   },
   {
@@ -209,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "3e9e0b40",
    "metadata": {},
    "outputs": [],
@@ -226,97 +244,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "9529f037",
-   "metadata": {},
+   "execution_count": 31,
+   "id": "f52d4858",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "guesses = []\n",
-    "\n",
+    "entropy = []\n",
     "for _, row in val_reviews.iterrows():\n",
     "    review = row['reviewText']\n",
-    "    aux = vector_db.long_search(review)\n",
+    "    aux, avg_entropy = vector_db.long_search(review)\n",
     "    guess = []\n",
     "    if aux is not None:\n",
     "        guess = aux.topic.values\n",
     "    guesses.append(guess)\n",
+    "    entropy.append(avg_entropy)\n",
     "    \n",
-    "val_reviews['guesses'] = guesses"
+    "val_reviews['guesses'] = guesses\n",
+    "val_reviews['entropy'] = entropy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "50a6c386",
+   "execution_count": 27,
+   "id": "cfc9202f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_reviews.loc[val_reviews['guesses'].apply(lambda x: str(x)) == '[]', 'reviewText'].to_excel('prueba.xlsx')"
+    "val_reviews.to_excel('prueba.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6496721",
+   "metadata": {},
+   "source": [
+    "#### Zero shot learning base model: Bart model tuned by Meta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "eb70f201",
+   "execution_count": 22,
+   "id": "0a7598f3",
    "metadata": {},
    "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5231\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.map_locations\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception ignored in: 'pandas._libs.index.IndexEngine._call_map_locations'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"pandas\\_libs\\hashtable_class_helper.pxi\", line 5231, in pandas._libs.hashtable.PyObjectHashTable.map_locations\n",
-      "TypeError: unhashable type: 'list'\n"
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]                                                          147\n",
-       "[Fit and Comfort]                                            46\n",
-       "[Longevity]                                                   4\n",
-       "[Material and Quality]                                        3\n",
-       "[Price and Value]                                             2\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Fit and Comfort, Fit and Comfort]           1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Price and Value, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Price and Value]                            1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Versatility, Fit and Comfort]                                1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Fit and Comfort]                            1\n",
-       "[Fit and Comfort, Material and Quality, Fit and Comfort]      1\n",
-       "[Fit and Comfort, User Experience, Fit and Comfort]           1\n",
-       "[Packaging and Presentation]                                  1\n",
-       "Name: guesses, dtype: int64"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "val_reviews.guesses.value_counts()"
+    "classifier = pipeline(\"zero-shot-classification\",\n",
+    "                      model=\"facebook/bart-large-mnli\")\n",
+    "\n",
+    "candidate_labels = ['Design','Brand','Packaging and Presentation','Price and Value','Customer Support','User Experience','Material and Quality','Fit and Comfort','Versatility','Longevity']\n",
+    "\n",
+    "result_val = val_reviews['reviewText'].apply(lambda x: classifier(x, candidate_labels, multiclass = True))\n",
+    "val_reviews['model'] = [[label for score, label in zip(result['scores'], result['labels']) if score > 0.15] for result in result_val]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84f558c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_reviews.to_excel('two_models.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "134a020e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_reviews = pd.read_excel('two_models.xlsx')\n",
+    "val_reviews['guesses'] = val_reviews['guesses'].apply(lambda x: x.replace(\"['\",\"\").replace(\"']\",\"\").replace(\"\\n\", \"\").split(\"' '\"))\n",
+    "val_reviews['model'] = val_reviews['model'].apply(lambda x: x.replace(\"[\", \"\").replace(\"]\", \"\").replace(\"'\", \"\").split(', '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0ef64555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_reviews.to_excel('comparison.xlsx')"
    ]
   }
  ],
