--- a/demo_topics/QA Idea.ipynb
+++ b/demo_topics/QA Idea.ipynb
@@ -189,6 +189,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "7716ef10-29ea-4c02-afa3-70db5dd0c232",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Comfortable': 0.7387912571430206,\n",
+       " 'Durability': 0.8415834158658981,\n",
+       " 'Ease of use': 0.9280714839696884,\n",
+       " 'Fiability': 0.8342458456754684,\n",
+       " 'Fit': 0.754075899720192,\n",
+       " 'Material Quality': 0.8006523847579956,\n",
+       " 'Price and Value': 0.8387993276119232,\n",
+       " 'text': 'They were a gift.  Went up a half size and they  are a little tight.  Will loosen some as they are worn.'}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans.to_dict('records')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "e5c76b17-2ace-467e-8f6b-104e947806f8",
    "metadata": {},
